[gd_scene load_steps=5 format=3 uid="uid://g7r0abvn0dli"]

[ext_resource type="Theme" uid="uid://dsk5olnx1e77u" path="res://FancyTheme.tres" id="1_yei7e"]
[ext_resource type="Script" path="res://Scripts/coin_betting.gd" id="2_2hpvi"]
[ext_resource type="Texture2D" uid="uid://cfsfmhokr0lvf" path="res://Sprites/FoxCoins_headsSmall.png" id="3_ousco"]
[ext_resource type="Texture2D" uid="uid://rbhka5f6qjh5" path="res://Sprites/FoxCoins_tailsSmall.png" id="4_7k6rv"]

[node name="CoinBetting" type="Panel"]
offset_right = 271.0
offset_bottom = 124.0
theme = ExtResource("1_yei7e")
script = ExtResource("2_2hpvi")

[node name="Title" type="Label" parent="."]
modulate = Color(0.815686, 0.396078, 0.34902, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = -47.0
offset_right = 57.5
offset_bottom = -1.0
grow_horizontal = 2
theme = ExtResource("1_yei7e")
theme_override_font_sizes/font_size = 33
text = "Wager"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalPoints" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.5
offset_top = 8.0
offset_right = 88.5
offset_bottom = 37.0
grow_horizontal = 2
theme = ExtResource("1_yei7e")
text = "Total Points: 100"

[node name="SplitPoints" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.4999
offset_top = -2.5
offset_right = 28.5001
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yei7e")
text = "50/50"

[node name="HeadsCoinSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -21.0
offset_right = 45.0
offset_bottom = 14.0
grow_vertical = 2
texture = ExtResource("3_ousco")
expand_mode = 1

[node name="HeadsCoinSprite2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -20.0
offset_right = -9.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_7k6rv")
expand_mode = 1

[node name="AddTails" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -44.0
offset_right = -9.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_yei7e")
text = "+"

[node name="AddHeads" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = -10.0
grow_vertical = 0
theme = ExtResource("1_yei7e")
text = "+"

[connection signal="button_up" from="AddTails" to="." method="_on_add_tails_button_up"]
[connection signal="button_up" from="AddHeads" to="." method="_on_add_heads_button_up"]
